--- a/sequences/.files/update2/nb/pYPKa_ZE_GPM1.ipynb
+++ b/sequences/.files/update2/nb/pYPKa_ZE_GPM1.ipynb
@@ -27,6 +27,12 @@
    "execution_count": 1,
    "id": "alleged-cowboy",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:50.989597Z",
+     "iopub.status.busy": "2021-09-25T19:31:50.988723Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.318146Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.317650Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -51,6 +57,12 @@
    "execution_count": 2,
    "id": "mineral-cover",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.328938Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.327398Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.344224Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.343716Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -86,6 +98,12 @@
    "execution_count": 3,
    "id": "typical-asthma",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.348081Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.347544Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.349402Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.349783Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -106,6 +124,12 @@
    "execution_count": 4,
    "id": "inappropriate-broadway",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.358432Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.357634Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.360259Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.359749Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -130,6 +154,12 @@
    "execution_count": 5,
    "id": "binding-national",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.365464Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.364626Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.367149Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.366574Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -150,6 +180,12 @@
    "execution_count": 6,
    "id": "collective-sunglasses",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.372155Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.371464Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.381084Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.380471Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -186,6 +222,12 @@
    "execution_count": 7,
    "id": "improving-remedy",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.384913Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.384345Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.386092Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.386517Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -206,6 +248,12 @@
    "execution_count": 8,
    "id": "intense-banner",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.390504Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.389715Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.392764Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.393429Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -236,6 +284,12 @@
    "execution_count": 9,
    "id": "welsh-trinidad",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.398757Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.397907Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.401951Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.401357Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -267,6 +321,12 @@
    "execution_count": 10,
    "id": "every-decimal",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.408421Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.407486Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.410021Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.410571Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -290,6 +350,12 @@
    "execution_count": 11,
    "id": "laden-orchestra",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.417598Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.416531Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.422231Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.421779Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -311,6 +377,12 @@
    "execution_count": 12,
    "id": "complete-skill",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.426331Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.425752Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.428102Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.428466Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -342,6 +414,12 @@
    "execution_count": 13,
    "id": "horizontal-anatomy",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.434256Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.433277Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.436568Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.437107Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -378,6 +456,12 @@
    "execution_count": 14,
    "id": "satisfied-patio",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.442964Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.442275Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.445514Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.445984Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -386,8 +470,8 @@
       "text/plain": [
        "|95°C|95°C               |    |tmf:71.6\n",
        "|____|_____          72°C|72°C|tmr:52.8\n",
-       "|5min|30s  \\ 52.2°C _____|____|60s/kb\n",
-       "|    |      \\______/ 0:32|5min|GC 35%\n",
+       "|3min|30s  \\ 52.3°C _____|____|45s/kb\n",
+       "|    |      \\______/ 0:30|5min|GC 35%\n",
        "|    |       30s         |    |544bp"
       ]
      },
@@ -413,6 +497,12 @@
    "execution_count": 15,
    "id": "successful-incentive",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.504607Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.463907Z",
+     "iopub.status.idle": "2021-09-25T19:31:51.915844Z",
+     "shell.execute_reply": "2021-09-25T19:31:51.915268Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -436,6 +526,12 @@
    "execution_count": 16,
    "id": "supreme-banner",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:51.943731Z",
+     "iopub.status.busy": "2021-09-25T19:31:51.928547Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.355834Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.355306Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -459,6 +555,12 @@
    "execution_count": 17,
    "id": "indonesian-supplement",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.361399Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.360583Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.364871Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.364139Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -509,6 +611,12 @@
    "execution_count": 18,
    "id": "oriental-elder",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.378071Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.372681Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.381421Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.381897Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -540,6 +648,12 @@
    "execution_count": 19,
    "id": "dense-dependence",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.395052Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.394468Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.396940Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.397410Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -571,6 +685,12 @@
    "execution_count": 20,
    "id": "modified-greek",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.406476Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.405934Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.408287Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.408642Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -604,6 +724,12 @@
    "execution_count": 21,
    "id": "clear-calgary",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.422605Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.421607Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.425744Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.426143Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -635,6 +761,12 @@
    "execution_count": 22,
    "id": "stuffed-income",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.437704Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.437034Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.440129Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.440635Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -670,6 +802,12 @@
    "execution_count": 23,
    "id": "amino-drinking",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.452572Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.452057Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.454139Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.454554Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -699,6 +837,12 @@
    "execution_count": 24,
    "id": "moral-above",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.464203Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.463744Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.466019Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.466379Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -728,6 +872,12 @@
    "execution_count": 25,
    "id": "attempted-rates",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.470232Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.469639Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.471772Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.472247Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -750,6 +900,12 @@
    "execution_count": 26,
    "id": "identical-saver",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.485013Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.484389Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.487248Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.486784Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -782,6 +938,12 @@
    "execution_count": 27,
    "id": "minute-biodiversity",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.494801Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.490355Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.500139Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.499549Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -812,6 +974,12 @@
    "execution_count": 28,
    "id": "taken-concrete",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-09-25T19:31:52.506710Z",
+     "iopub.status.busy": "2021-09-25T19:31:52.505883Z",
+     "iopub.status.idle": "2021-09-25T19:31:52.510187Z",
+     "shell.execute_reply": "2021-09-25T19:31:52.510878Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -846,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
